# Python-6-Core-HomeWork-08

./: LICENSE  birthdays.csv  readme.md  setup.cfg
get_birthdays/: get_birthdays.py  main.py
get_birthdays.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: test.csv
