[metadata]
name = get_birthdays
version = 0.1.1
author = Volodymyr Kravchenko
author_email = vlodya@gmail.com
description = HW 08. Reminder Birthdays
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/VlodyaKr/Python-6-Core-HomeWork-08
project_urls =
    Bug Tracker = https://github.com/VlodyaKr/Python-6-Core-HomeWork-08/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    reminder = get_birthdays.main:start